testsuite/poke.pkl/int-struct-type-diag-6.pk
/* { dg-do compile } */

deftype Foo =
  struct uint<32> /* { dg-error "total size" } */
  {
  };
